--- a/README
+++ b/README
@@ -1,10 +1,16 @@
-20170615  post migration
+#20170615  post migration
+#
+#in this templates dir...
+#
+#opac directory is brought over entirely from last and past versions so 2.10.6  This is getting read first before the default
+#marc directory is updated from 2.10.6 as well.
+#
+#All other directories are copies of the 2.12.2 default templates.
+#
+#The staff dir will require changes as of this
 
-in this templates dir...
+20180226 post migration
 
-opac directory is brought over entirely from last and past versions so 2.10.6  This is getting read first before the default
-marc directory is updated from 2.10.6 as well.
-
-All other directories are copies of the 2.12.2 default templates.
-
-The staff dir will require changes as of this
+- issues with templates especially in opac search 
+- removed copies of dirs that do NOT have customizations to allow for fallback to default updated templates
+- reconciling opac/ customizations with default
